refactor(chat): replace Collectors.toList() with Stream.toList() method